# kedit

./: CMakeLists.txt  LICENSE  README.md  makefile
cmake/: env.cmake  freetype.cmake  gl3.cmake  glad.cmake  glm.cmake  k.cmake  libnoise.cmake  opengl.cmake  openmp.cmake
docs/: notes.org
lib/glad/include/glad/: glad.h
lib/glad/src/: glad.c
lib/k/include/backbone-core-cpp/: File.hpp  Filesystem.hpp  Path.hpp  Print.hpp  StrView.hpp  Texp.hpp
lib/k/include/kgfx/: GlmHashes.h  Profiler.hpp  RenderWindow.h  RenderWindow.hpp  ShaderUtil.hpp  Str.h  Str.hpp  TextRenderer.h  TextRenderer.hpp
src/: Buffer.hpp  CMakeLists.txt  Clipboard.hpp  Cursor.hpp  CursorMove.hpp  DebugCallback.hpp  Editor.cpp  Editor.hpp  EditorHandle.cpp  EditorMemory.cpp  EditorMenus.cpp  EditorRender.cpp  FileBuffer.hpp  FileBufferHandle.cpp  FileBufferRender.cpp  GraphicsContext.hpp  History.hpp  Menu.hpp  MenuHandle.cpp  MenuParse.cpp  MenuRender.cpp  Page.cpp  Page.hpp  PageRender.cpp  PageT.hpp  RectangleProgramContext.hpp  Rope.hpp  Scroller.hpp  Search.hpp  Shaders.hpp  TextField.hpp  TextFieldHandle.cpp  main.cpp
test-files/: matcher.ll  path.ll  search-2-back.txt  search-forward-back.txt
